--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body class="p-3 mb-2 bg-light text-dark">
     <br />
-    <h1 id="main_title">Quatro Board Game</h1><br><br>
+    <h1 id="main_title">Quarto Board Game</h1><br><br>
 
     <div class="container">
 
