--- a/index.html
+++ b/index.html
@@ -56,44 +56,7 @@
         </div>
 
 
-        <div class="middle_panel" id="quatro_board">
-
-
-
-            <table class="table table-dark">
-                <tr>
-                    <td>4,1</td>
-                    <td>4,2</td>
-                    <td>4,3</td>
-                    <td>4,4</td>
-
-                </tr>
-
-                <tr>
-                    <td>3,1</td>
-                    <td>3,2</td>
-                    <td>3,3</td>
-                    <td>3,4</td>
-                </tr>
-                <tr>
-
-                    <td>2,1</td>
-                    <td>2,2</td>
-                    <td>2,3</td>
-                    <td>2,4</td>
-                </tr>
-                <tr>
-                    <td>1,1</td>
-                    <td>1,2</td>
-                    <td>1,3</td>
-                    <td>1,4</td>
-
-                </tr>
-            </table>
-
-
-
-
+        <div class="middle_panel" id="quarto_board">
 
         </div>
 
@@ -102,7 +65,7 @@
 
 
             <div class="p-3 border bg-light" id="player_info">
-                
+
 
             </div>
             <br>
@@ -119,9 +82,7 @@
             <div class="p-3 border bg-light" id="piece_selector_input">
                 <h3>Select piece for the other player to place.</h3><br>
                 <select id='piece_selector'>
-                    <option value="">piece 1</option>
-                    <option value="">piece x</option>
-                    <option value="">piece 15</option>
+
                 </select>
                 <button id='piece_selected' class='btn btn-primary'>Select</button>
 
