--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="left_panel">
 
             <div class="card" style="width: 18rem;">
-                <img src="images/61eraYqjOlL._AC_SL1110_.jpg" class="card-img-top" alt="...">
+                <img src="images/quatro_board_game.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Quatro Board Game Rules</h5><br />
                     <p class="card-text">Quarto is a board game for two players invented by Swiss mathematician Blaise
