--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>ΑΔΙΣΕ: Quarto</title>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/quarto.css">
     <script src="bootstrap/js/bootstrap.min.js"></script>
-
+    <script src="js/quarto.js"></script>
+   
 </head>
 
 
