minor additions and changes
[1] added selected piece notification
[2] simplified sql schema
[3] implemented reset button
[4] fixed some syntax issues

--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
     <br>
     <div class="p-3 border bg-light" id="piece_coordinates_input">
         <h3>Choose your piece placement</h3><br>
+        <img id="current_piece"  src="">
         <input id='piece_coordinates'>
         <button id='place_piece' class='btn btn-primary'>Select</button>
+        
     </div>
     <br>
     <div class="p-3 border bg-light" id="start_reset_game">
