implemented pick piece functionality
[1] fixed pick piece request
[2] added visual aid for picking the pieces
[3] made faster transitions between game  stages (login,pick,place)

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <br>
     <div class="p-3 border bg-light" id="piece_coordinates_input">
         <h3>Choose your piece placement</h3><br>
-        <img id="current_piece" src="">
+        <div id="curent_piece_img"></div>
         <input id='piece_coordinates'>
         <button id='place_piece' class='btn btn-primary'>Select</button>
 
