--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 
 </head>
 
-<body class="p-3 mb-2 bg-light text-dark">
-
+<body class="p-3 mb-2 bg-light text-dark"" >
+    <div class=" p-3 border bg-light">
+    <h3>QUARTO BOARD GAME | GIORGOS MOISIDIS - 174881 | ADISE 2021</h3>
+    </div>
     <div id="quarto_board"></div>
     <div class="p-3 border bg-light" id="player_info">
-        <h3>Player Info => </h3>
+        <h3>Welcome to Quarto</h3>
     </div>
 
     <div class="p-3 border bg-light" id="game_login_input">
@@ -48,6 +50,18 @@
 
     <div class="p-3 border bg-light" id="waiting">
         <h3>Waiting for other player ...</h3>
+    </div>
+
+    <div class="p-3 border bg-light" id="winner">
+        <img src="images/won.png">
+    </div>
+
+    <div class="p-3 border bg-light" id="loser">
+        <img src="images/lost.png">
+    </div>
+
+    <div class="p-3 border bg-light" id="draw">
+        <img src="images/draw.png">
     </div>
 
     <br>
