--- a/index.html
+++ b/index.html
@@ -16,20 +16,28 @@
 
 </head>
 
-<body class="p-3 mb-2 bg-light text-dark"" >
+<body class="p-3 mb-2 bg-light text-dark">
+
+
     <div class=" p-3 border bg-light">
-    <h3>QUARTO BOARD GAME | GIORGOS MOISIDIS - 174881 | ADISE 2021</h3>
+        <h3>QUARTO BOARD GAME | GIORGOS MOISIDIS - 174881 | ADISE 2021</h3>
     </div>
+
+    <!-- Board section  -->
+
     <div id="quarto_board"></div>
     <div class="p-3 border bg-light" id="player_info">
         <h3>Welcome to Quarto</h3>
     </div>
+
+    <!-- Login section  -->
 
     <div class="p-3 border bg-light" id="game_login_input">
         <h3>Insert username.</h3><br>
         <input id='username'>
         <button id='quatro_login' class='btn btn-primary'>Login</button><br>
     </div>
+    <!-- Pick piece section  -->
 
     <div class="p-3 border bg-light" id="piece_selector_input">
         <h3>Select piece for the other player to place.</h3><br>
@@ -40,6 +48,8 @@
         <div id="piece_images"></div>
     </div>
     <br>
+    <!-- Place piece section  -->
+
     <div class="p-3 border bg-light" id="piece_coordinates_input">
         <h3>Choose your piece placement</h3><br>
         <div id="curent_piece_img"></div>
@@ -47,10 +57,15 @@
         <button id='place_piece' class='btn btn-primary'>Select</button>
 
     </div>
+    <!-- Wait until is your turn section  -->
+
 
     <div class="p-3 border bg-light" id="waiting">
         <h3>Waiting for other player ...</h3>
     </div>
+
+    <!-- win,lose,draw pop up  -->
+
 
     <div class="p-3 border bg-light" id="winner">
         <img src="images/won.png">
@@ -63,6 +78,11 @@
     <div class="p-3 border bg-light" id="draw">
         <img src="images/draw.png">
     </div>
+
+    <div class="p-3 border bg-light" id="aborted">
+        <img src="images/aborted.png">
+    </div>
+    <!-- Start/reset button section  -->
 
     <br>
     <div class="p-3 border bg-light" id="start_reset_game">
