--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>ΑΔΙΣΕ: Quarto</title>
+    <title>ADISE: Quarto</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/quarto.css">
@@ -16,77 +16,118 @@
 
 </head>
 
-<body class="p-3 mb-2 bg-light text-dark">
+<body id="body">
 
+    <div id="main_page" class=" p-3 border bg-light">
 
-    <div class=" p-3 border bg-light">
-        <h3>QUARTO BOARD GAME | GIORGOS MOISIDIS - 174881 | ADISE 2021</h3>
-    </div>
+        <br>
 
-    <!-- Board section  -->
+        <!-- Title section  -->
 
-    <div id="quarto_board"></div>
-    <div class="p-3 border bg-light" id="player_info">
-        <h3>Welcome to Quarto</h3>
-    </div>
+        <div id="title_banner" class=" p-3 border bg-light">
+            <h3>QUARTO BOARD GAME | GIORGOS MOISIDIS - 174881 | ADISE 2021</h3>
+        </div>
 
-    <!-- Login section  -->
+        <!-- Board section  -->
 
-    <div class="p-3 border bg-light" id="game_login_input">
-        <h3>Insert username.</h3><br>
-        <input id='username'>
-        <button id='quatro_login' class='btn btn-primary'>Login</button><br>
-    </div>
-    <!-- Pick piece section  -->
+        <br>
 
-    <div class="p-3 border bg-light" id="piece_selector_input">
-        <h3>Select piece for the other player to place.</h3><br>
-        <select id='piece_selector'>
-            <option value="">---Choose piece---</option>
-        </select>
-        <button id='piece_selected' class='btn btn-primary'>Select</button>
-        <div id="piece_images"></div>
-    </div>
-    <br>
-    <!-- Place piece section  -->
+        <div id="quarto_board" class=" p-3 border bg-light"></div>
 
-    <div class="p-3 border bg-light" id="piece_coordinates_input">
-        <h3>Choose your piece placement</h3><br>
-        <div id="curent_piece_img"></div>
-        <input id='piece_coordinates'>
-        <button id='place_piece' class='btn btn-primary'>Select</button>
+        <br>
 
-    </div>
-    <!-- Wait until is your turn section  -->
+        <!-- Input mode selector  -->
 
+        <div id="playing_mode">
+            <strong>onClick mode </strong><select class="form-select" id="mode">
+                <option value="onclick">ON</option>
+                <option value="textbox">OFF</option>
+            </select>
+        </div>
 
-    <div class="p-3 border bg-light" id="waiting">
-        <h3>Waiting for other player ...</h3>
-    </div>
+        <br>
 
-    <!-- win,lose,draw pop up  -->
+        <!-- Player Info section  -->
 
+        <div id="player_info" class="p-3 border bg-light">
+            <h3>Welcome to Quarto</h3>
+        </div>
 
-    <div class="p-3 border bg-light" id="winner">
-        <img src="images/won.png">
-    </div>
+        <br>
 
-    <div class="p-3 border bg-light" id="loser">
-        <img src="images/lost.png">
-    </div>
+        <!-- Login section  -->
 
-    <div class="p-3 border bg-light" id="draw">
-        <img src="images/draw.png">
-    </div>
+        <br>
 
-    <div class="p-3 border bg-light" id="aborted">
-        <img src="images/aborted.png">
-    </div>
-    <!-- Start/reset button section  -->
+        <div class="p-3 border bg-light" id="game_login_input">
+            <h3>Insert username.</h3><br>
+            <input id='username'>
+            <button id='quatro_login' class='btn btn-primary'>Login</button><br>
+        </div>
 
-    <br>
-    <div class="p-3 border bg-light" id="start_reset_game">
-        <button id='quatro_reset' class='btn btn-primary'>START/RESET</button><br>
+        <br>
+
+        <!-- Pick piece section  -->
+
+        <div class="p-3 border bg-light" id="piece_selector_input">
+            <h3>Select piece for the other player to place.</h3><br>
+            <div id="text_input_pick">
+                <select id='piece_selector'>
+                    <option value="">---Choose piece---</option>
+                </select>
+                <button id='piece_selected' class='btn btn-primary'>Select</button>
+            </div>
+            <div id="piece_images"></div>
+        </div>
+
+        <br>
+
+        <!-- Place piece section  -->
+
+        <div class="p-3 border bg-light" id="piece_coordinates_input">
+            <h3>Choose your piece placement</h3><br>
+            <div id="curent_piece_img"></div>
+            <div id="text_input_place">
+                <input id='piece_coordinates'>
+                <button id='place_piece' class='btn btn-primary'>Select</button>
+            </div>
+            <div id="remaining_pieces">Remaining Pieces</div>
+        </div>
+
+        <br>
+
+        <!-- Wait until is your turn section  -->
+
+        <div class="p-3 border bg-light" id="waiting">
+            <h3>Waiting for other player ...</h3>
+        </div>
+
+        <!-- win,lose,draw,abort pop up  -->
+
+        <div class="p-3 border bg-light" id="winner">
+            <p>YOU WON</p>
+        </div>
+
+        <div class="p-3 border bg-light" id="loser">
+            <p>YOU LOST</p>
+        </div>
+
+        <div class="p-3 border bg-light" id="draw">
+            <p>GAME DRAW</p>
+        </div>
+
+        <div class="p-3 border bg-light" id="aborted">
+            <p>GAME ABORTED</p>
+        </div>
+
+        <!-- Start/reset button section  -->
+
+        <br>
+
+        <div class="p-3 border bg-light" id="start_reset_game">
+            <button id='quatro_reset' class='btn btn-primary'>START/RESET</button><br>
+        </div>
+
     </div>
 </body>
 
